Rend 0.7.0 changelog:

Gameplay:
* Added new decorative items - water fountain, ceiling wires, alien artifact
* Slightly repositioned spawn-pickups on 2p_greenpath
* Reworked central storage area on 3p_shotgun_frenzy to allow better maneuverability
* Bots are more likely to equip laser crossbows and rocket launchers
* Bot movement was tweaked to be more varied, hopefully for the better

Rend 0.6.0 changelog:

Gameplay:
* Added a new 3-player map: "Lasertag"

UX:
* Last IP that was succesfully used to join a networked game is remembered and pre-filled in the Join game screen
* If server hosts a map that peer doesn't have, that map will be downloaded
* Join game dialog is now a modal window
	* Text input for IP is autofocused
* Gamepad button A can be used to confirm UI dialogs and B button can be used to go back

Bugfixes:
* Fixed graphical glitch in editor that shows in place of the sidebar until a map is opened
* Server-side peer no longer desyncs when another peer disconnects

Other:
* New tracks were added to the soundtrack

Rend 0.5.1 changelog:

* Increased performance on 3P/4P maps when multiple bots are in game

Bugfixes:
* Clients are no longer performing frame lenghtening if they are the ones lagging behind

Rend 0.5.0 changelog:

Gameplay:
* Look direction after respawning now depends on the rotation of the player spawn item
	* This rotation can be configured in the editor
* Added a new 4-player map: "Rocket Courtyard"

UX:
* Unused item properites were hidden in the editor
* Official map pack was renamed to official_ffa (to indicate these are deathmatch maps)
* Each map was renamed into format <number of players>_<name of the map> for better clarity
	* Also the maps will now be sorted by the number of players they support

Bugfixes:
* Fixed a bug where certain shortcuts didn't work in the editor after leaving playtest
* Fixed a possible crash when killing somebody with a projectile